--- a/resources/i18n/schemas.txt
+++ b/resources/i18n/schemas.txt
@@ -4480,6 +4480,12 @@
 "task-katselmus.rakennus.tila.tila.lopullinen" "sv" "Slutlig"
 "task-katselmus.rakennus.tila.tila.osittainen" "fi" "Osittainen"
 "task-katselmus.rakennus.tila.tila.osittainen" "sv" "Delvis"
+"task-katselmus.katselmuksenLaji.Aloituskatselmus" "fi" "Aloituskatselmus"
+"task-katselmus.katselmuksenLaji.Aloituskatselmus" "sv" "Inledningssyn"
+"task-katselmus.katselmuksenLaji.Loppukatselmus" "fi" "Loppukatselmus"
+"task-katselmus.katselmuksenLaji.Loppukatselmus" "sv" "Slutsyn"
+"task-katselmus.katselmuksenLaji.Muu valvontakäynti" "fi" "Muu valvontakäynti"
+"task-katselmus.katselmuksenLaji.Muu valvontakäynti" "sv" "Annat kontrollbesök"
 "task-katselmus-ya.katselmuksenLaji._group_label" "fi" "Katselmuksen laji"
 "task-katselmus-ya.katselmuksenLaji._group_label" "sv" "Typ av syneförrättning"
 "task-katselmus-ya.katselmuksenLaji.Aloituskatselmus" "fi" "Aloituskatselmus"
@@ -5214,6 +5220,10 @@
 "uusi-rakennus-ei-huoneistoa._group_label" "sv" "Ny byggnad"
 "vaadittuLupaehtona" "fi" "Vaadittu lupaehtona"
 "vaadittuLupaehtona" "sv" "Krävs som tillståndsvillkor"
+"vaadittuLupaehtona.true" "fi" "Vaadittu lupaehtona"
+"vaadittuLupaehtona.true" "sv" "Krävs som tillståndsvillkor"
+"vaadittuLupaehtona.false" "fi" "Ei vaadittu lupaehtona"
+"vaadittuLupaehtona.false" "sv" "Krävs inte som tillståndsvillkor"
 "vaarallinenainetyyppi" "fi" "Aines"
 "vaarallinenainetyyppi" "sv" "Substans"
 "vaarallinenainetyyppi.aerosolipullot" "fi" "Aerosolipullot"
