Calendar mgmt view drafted up using hardcoded dummy data

--- a/resources/i18n/common.txt
+++ b/resources/i18n/common.txt
@@ -1675,6 +1675,14 @@
 "auth-admin.required-fields-obligatory.enabled" "sv" "Blocka inlämning av ansökan med bristfällig information"
 "auth-admin.required-fields-obligatory.title" "fi" "Ehdot hakemusten jättämiseksi"
 "auth-admin.required-fields-obligatory.title" "sv" "Villkor för att lämna ansökan"
+"auth-admin.resource.calendar.add" "fi" "Lisää kalenteri"
+"auth-admin.resource.calendar.add" "sv" "Lägg till kalendar"
+"auth-admin.resource.calendar.name" "fi" "Nimi"
+"auth-admin.resource.calendar.name" "sv" "Namn"
+"auth-admin.resource.calendar.organization" "fi" "Organisaatio"
+"auth-admin.resource.calendar.organization" "sv" "Organisation"
+"auth-admin.resources-admin" "fi" "Kalenterien hallinta"
+"auth-admin.resources-admin" "sv" "Kalendarhantering"
 "auth-admin.role" "fi" "Rooli"
 "auth-admin.role" "sv" "Roll"
 "auth-admin.selected-operations" "fi" "Käyttöön valitut toimenpiteet"
