--- a/resources/i18n/errors.txt
+++ b/resources/i18n/errors.txt
@@ -40,3 +40,5 @@
 "error.appeal-type-change-denied" "sv" "Typ av besvär/rättelseyrkan kan inte ändras"
 "error.invalid-tos-function" "fi" "Valittua menettelyä ei löytynyt tiedonohjaussuunnitelmasta"
 "error.invalid-tos-function" "sv" ""
+"error.invalid-metadata-for-archive" "fi" "Arkistointiin vaadittavien metatietojen generointi hankkeen tiedoista epäonnistui"
+"error.invalid-metadata-for-archive" "sv" ""
