Allow archivist to correct TOS function after the verdict has been given

--- a/resources/i18n/common.txt
+++ b/resources/i18n/common.txt
@@ -1993,6 +1993,8 @@
 "caseFile.documentSubmitted" "sv" "Dokument tillsatt"
 "caseFile.tosFunctionChange" "fi" "Tehtäväluokka asetettu"
 "caseFile.tosFunctionChange" "sv" ""
+"caseFile.tosFunctionCorrection" "fi" "Tehtäväluokka korjattu"
+"caseFile.tosFunctionCorrection" "sv" ""
 "caseFile.stateNotSet" "fi" "Ei asetettu tiedonohjaussuunnitelmassa"
 "caseFile.stateNotSet" "sv" ""
 "caseFile.event" "fi" "Tapahtuma"
@@ -5140,3 +5142,7 @@
 "libre-conversion-error" "sv" ""
 "task.katselmuksenLaji-required" "fi" "Katselmuksen laji"
 "task.katselmuksenLaji-required" "sv" ""
+"tos.function.fix" "fi" "Korjaa tiedonohjauksen tehtäväluokka"
+"tos.function.fix" "sv" ""
+"tos.function.fix.guide" "fi" "Tehtäväluokan korjaus hakee uuden luokan mukaiset oletusmetatiedot asiakirjoille, joita ei ole vielä arkistoitu. Tehtäväluokan muutos kirjataan käsittelyprosessiin korjauksena."
+"tos.function.fix.guide" "sv" ""
