Review buildings table and related fixes.

--- a/resources/i18n/schemas.txt
+++ b/resources/i18n/schemas.txt
@@ -4470,12 +4470,18 @@
 "task-katselmus.rakennus._group_label" "sv" "Byggnad som bör besiktas"
 "task-katselmus.rakennus.rakennus._group_label" "fi" "Rakennus"
 "task-katselmus.rakennus.rakennus._group_label" "sv" "Byggnad"
+"task-katselmus.rakennukset" "fi" "Rakennukset"
+"task-katselmus.rakennukset" "sv" "Byggnader"
 "task-katselmus.rakennus.tila._group_label" "fi" "Rakennuksen katselmus"
 "task-katselmus.rakennus.tila._group_label" "sv" "Syn av byggnad"
 "task-katselmus.rakennus.tila.kayttoonottava" "fi" "Rakennus otettu käyttöön"
 "task-katselmus.rakennus.tila.kayttoonottava" "sv" "Byggnad ibruktagen"
 "task-katselmus.rakennus.tila.tila._group_label" "fi" "Tila"
 "task-katselmus.rakennus.tila.tila._group_label" "sv" "Status"
+"task-katselmus.tila" "fi" "Tila"
+"task-katselmus.tila" "sv" "Status"
+"task-katselmus.katselmus.tila" "fi" ""
+"task-katselmus.katselmus.tila" "sv" ""
 "task-katselmus.rakennus.tila.tila.lopullinen" "fi" "Lopullinen"
 "task-katselmus.rakennus.tila.tila.lopullinen" "sv" "Slutlig"
 "task-katselmus.rakennus.tila.tila.osittainen" "fi" "Osittainen"
@@ -5582,3 +5588,4 @@
 "task-katselmus.rakennus.valtakunnallinenNumero" "sv" "Landsomfattande nummer"
 "task-katselmus.rakennus.kunnanSisainenPysyvaRakennusnumero" "fi" "Kunna sisäinen pysyvä numero"
 "task-katselmus.rakennus.kunnanSisainenPysyvaRakennusnumero" "sv" "Beständig nummer inom kommunen"
+"task-katselmus.selite" "fi" "Selite"
