--- a/resources/i18n/common.txt
+++ b/resources/i18n/common.txt
@@ -1677,6 +1677,8 @@
 "auth-admin.required-fields-obligatory.title" "sv" "Villkor för att lämna ansökan"
 "auth-admin.resource.calendar.add" "fi" "Lisää kalenteri"
 "auth-admin.resource.calendar.add" "sv" "Lägg till kalendar"
+"auth-admin.resource.calendar.delete.confirm" "fi" "Oletko varma, että haluat poistaa kalenterin?"
+"auth-admin.resource.calendar.delete.confirm" "sv" "Är du säker på att du vill ta bort kalendern?"
 "auth-admin.resource.calendar.name" "fi" "Nimi"
 "auth-admin.resource.calendar.name" "sv" "Namn"
 "auth-admin.resource.calendar.organization" "fi" "Organisaatio"
