Finalize TOS function correction front-end code

--- a/resources/i18n/common.txt
+++ b/resources/i18n/common.txt
@@ -5145,7 +5145,13 @@
 "libre-conversion-error" "sv" ""
 "task.katselmuksenLaji-required" "fi" "Katselmuksen laji"
 "task.katselmuksenLaji-required" "sv" ""
-"tos.function.fix" "fi" "Korjaa tiedonohjauksen tehtäväluokka"
+"tos.function.fix" "fi" "Tehtäväluokan korjaus"
 "tos.function.fix" "sv" ""
 "tos.function.fix.guide" "fi" "Tehtäväluokan korjaus hakee uuden luokan mukaiset oletusmetatiedot asiakirjoille, joita ei ole vielä arkistoitu. Tehtäväluokan muutos kirjataan käsittelyprosessiin korjauksena."
 "tos.function.fix.guide" "sv" ""
+"tos.function.fix.reason" "fi" "Korjauksen syy"
+"tos.function.fix.reason" "sv" ""
+"tos.function.fix.select" "fi" "Uusi tehtäväluokka"
+"tos.function.fix.select" "sv" ""
+"korjaa" "fi" "Korjaa"
+"korjaa" "sv" ""
