Libreoffice-template verdict-contract added

--- a/resources/i18n/common.txt
+++ b/resources/i18n/common.txt
@@ -5020,6 +5020,14 @@
 "verdict.viimeinenValitus" "sv" "Sista besvärstag"
 "verdict.voimassaHetki" "fi" "Voimassa"
 "verdict.voimassaHetki" "sv" "Giltig"
+"verdict.osapuolet.ja.yhteyshenkilot" "fi" "Osapuolet ja yhteyshenkilöt"
+"verdict.osapuolet.ja.yhteyshenkilot" "sv" ""
+"verdict.contract.content" "fi" "Sopimuksen sisältö"
+"verdict.contract.content" "sv" ""
+"verdict.contract.signed.by" "fi" "Hyväksytty ja sähköisesti allekirjoitettu Lupapiste-palvelussa"
+"verdict.contract.signed.by" "sv" ""
+"verdict.contract.attachments" "fi" "Sopimuksen liitteet"
+"verdict.contract.attachments" "sv" ""
 "verdict-attachment-prints-order.order-dialog.address" "fi" "Rakennuspaikka"
 "verdict-attachment-prints-order.order-dialog.address" "sv" "Byggplats"
 "verdict-attachment-prints-order.order-dialog.applicantName" "fi" "Hakijan nimi"
