--- a/resources/i18n/common.txt
+++ b/resources/i18n/common.txt
@@ -5157,7 +5157,7 @@
 "tos.function.fix" "sv" ""
 "tos.function.fix.guide" "fi" "Tehtäväluokan korjaus hakee uuden luokan mukaiset oletusmetatiedot asiakirjoille, joita ei ole vielä arkistoitu. Tehtäväluokan muutos kirjataan käsittelyprosessiin korjauksena."
 "tos.function.fix.guide" "sv" ""
-"tos.function.fix.reason" "fi" "Korjauksen syy"
+"tos.function.fix.reason" "fi" "Korjauksen perustelu"
 "tos.function.fix.reason" "sv" ""
 "tos.function.fix.select" "fi" "Uusi tehtäväluokka"
 "tos.function.fix.select" "sv" ""
