--- a/resources/i18n/common.txt
+++ b/resources/i18n/common.txt
@@ -4145,8 +4145,8 @@
 "review.condition" "sv" "Tillståndsvillkor"
 "review.show-notes" "fi" "Näytä huomautukset"
 "review.show-notes" "sv" "Visa anmärkningar"
-"review.state" "fi" "Laji"
-"review.state" "sv" "Art"
+"review.state" "fi" "Tila"
+"review.state" "sv" "Status"
 "rotate-left" "fi" "Käännä vasemmalle"
 "rotate-left" "sv" "Vrid åt vänster"
 "rotate-over" "fi" "Käännä ylösalaisin"
