Checkbox (and wrapper) style fixes.

--- a/resources/i18n/schemas.txt
+++ b/resources/i18n/schemas.txt
@@ -4483,6 +4483,7 @@
 "task-katselmus.tila" "sv" "Status"
 "task-katselmus.katselmus.tila" "fi" ""
 "task-katselmus.katselmus.tila" "sv" ""
+"task-katselmus.tiedoksianto"  "fi"  "Tiedoksianto verottajalle laiminlyöty"
 "task-katselmus.rakennus.tila.tila.lopullinen" "fi" "Lopullinen"
 "task-katselmus.rakennus.tila.tila.lopullinen" "sv" "Slutlig"
 "task-katselmus.rakennus.tila.tila.osittainen" "fi" "Osittainen"
