Added MS Works and MS Outlook mime type localization

--- a/resources/i18n/mime-types.txt
+++ b/resources/i18n/mime-types.txt
@@ -1,5 +1,7 @@
 "application/msword" "fi" "Word-dokumentti"
 "application/msword" "sv" "Word-dokument"
+"application/msworks" "fi" "Works-dokumentti"
+"application/msworks" "sv" "Works-dokument"
 "application/pdf" "fi" "PDF-dokumentti"
 "application/pdf" "sv" "PDF-dokument"
 "application/postscript" "fi" "PS-dokumentti"
@@ -8,6 +10,8 @@
 "application/rtf" "sv" "RTF-textdokument"
 "application/vnd.ms-excel" "fi" "Excel-taulukko"
 "application/vnd.ms-excel" "sv" "Excel-kalkylblad"
+"application/vnd.ms-outlook" "fi" "Outlook-sähköpostiviesti"
+"application/vnd.ms-outlook" "sv" "Outlook-epost"
 "application/vnd.ms-powerpoint" "fi" "PowerPoint-esitys"
 "application/vnd.ms-powerpoint" "sv" "PowerPoint-presentation"
 "application/vnd.oasis.opendocument.chart" "fi" "OpenDocument-kaavio"
