Localization change ilmastointi -> ilmanvaihto

--- a/resources/i18n/schemas.txt
+++ b/resources/i18n/schemas.txt
@@ -2208,8 +2208,8 @@
 "purku.varusteet.kaasuKytkin" "sv" "Gas"
 "purku.varusteet.kaasuKytkin.help" "fi" "Kaasulla tarkoitetaan myös nestekaasua, mikäli rakennus on tätä varten varustettu pysyvällä verkolla."
 "purku.varusteet.kaasuKytkin.help" "sv" "Med gas avses också flytgas i fall byggnaden för detta ändamål är försedd med varaktigt nät."
-"purku.varusteet.koneellinenilmastointiKytkin" "fi" "Koneellinen ilmastointi"
-"purku.varusteet.koneellinenilmastointiKytkin" "sv" "Maskinell luftkonditionering"
+"purku.varusteet.koneellinenilmastointiKytkin" "fi" "Koneellinen ilmanvaihto"
+"purku.varusteet.koneellinenilmastointiKytkin" "sv" "Maskinell ventilation"
 "purku.varusteet.lamminvesiKytkin" "fi" "Lämminvesi"
 "purku.varusteet.lamminvesiKytkin" "sv" "Varmvatten"
 "purku.varusteet.liitettyJatevesijarjestelmaanKytkin" "fi" "Kiinteistö on liitetty erilliseen jätevesijärjestelmään"
@@ -3036,7 +3036,7 @@
 "rakennuksen-laajentaminen.varusteet.kaasuKytkin" "sv" "Gas"
 "rakennuksen-laajentaminen.varusteet.kaasuKytkin.help" "fi" "Kaasulla tarkoitetaan myös nestekaasua, mikäli rakennus on tätä varten varustettu pysyvällä verkolla."
 "rakennuksen-laajentaminen.varusteet.kaasuKytkin.help" "sv" "Med gas avses också flytgas i fall byggnaden för detta ändamål är försedd med varaktigt nät."
-"rakennuksen-laajentaminen.varusteet.koneellinenilmastointiKytkin" "fi" "Koneellinen ilmastointi"
+"rakennuksen-laajentaminen.varusteet.koneellinenilmastointiKytkin" "fi" "Koneellinen ilmanvaihto"
 "rakennuksen-laajentaminen.varusteet.koneellinenilmastointiKytkin" "sv" "Maskinell ventilation"
 "rakennuksen-laajentaminen.varusteet.lamminvesiKytkin" "fi" "Lämminvesi"
 "rakennuksen-laajentaminen.varusteet.lamminvesiKytkin" "sv" "Varmvatten"
@@ -3672,7 +3672,7 @@
 "rakennuksen-muuttaminen.varusteet.kaasuKytkin" "sv" "Gas"
 "rakennuksen-muuttaminen.varusteet.kaasuKytkin.help" "fi" "Kaasulla tarkoitetaan myös nestekaasua, mikäli rakennus on tätä varten varustettu pysyvällä verkolla."
 "rakennuksen-muuttaminen.varusteet.kaasuKytkin.help" "sv" "Med gas avses också flytgas i fall byggnaden för detta ändamål är försedd med varaktigt nät."
-"rakennuksen-muuttaminen.varusteet.koneellinenilmastointiKytkin" "fi" "Koneellinen ilmastointi"
+"rakennuksen-muuttaminen.varusteet.koneellinenilmastointiKytkin" "fi" "Koneellinen ilmanvaihto"
 "rakennuksen-muuttaminen.varusteet.koneellinenilmastointiKytkin" "sv" "Maskinell ventilation"
 "rakennuksen-muuttaminen.varusteet.lamminvesiKytkin" "fi" "Lämminvesi"
 "rakennuksen-muuttaminen.varusteet.lamminvesiKytkin" "sv" "Varmvatten"
@@ -5194,7 +5194,7 @@
 "uusiRakennus.varusteet.kaasuKytkin" "sv" "Gas"
 "uusiRakennus.varusteet.kaasuKytkin.help" "fi" "Kaasulla tarkoitetaan myös nestekaasua, mikäli rakennus on tätä varten varustettu pysyvällä verkolla."
 "uusiRakennus.varusteet.kaasuKytkin.help" "sv" "Med gas avses också flytgas i fall byggnaden för detta ändamål är försedd med varaktigt nät."
-"uusiRakennus.varusteet.koneellinenilmastointiKytkin" "fi" "Koneellinen ilmastointi"
+"uusiRakennus.varusteet.koneellinenilmastointiKytkin" "fi" "Koneellinen ilmanvaihto"
 "uusiRakennus.varusteet.koneellinenilmastointiKytkin" "sv" "Maskinell ventilation"
 "uusiRakennus.varusteet.lamminvesiKytkin" "fi" "Lämminvesi"
 "uusiRakennus.varusteet.lamminvesiKytkin" "sv" "Varmvatten"
