checkbox for including buildings in asemapiirros stamp

--- a/resources/i18n/stamping.txt
+++ b/resources/i18n/stamping.txt
@@ -6,10 +6,10 @@
 "application.stampAttachments" "sv" "Stämpla bilagorna"
 "stamp.all" "fi" "Valitse kaikki"
 "stamp.all" "sv" "Välj alla"
-"stamp.building.none" "fi" "Ei rakennustunnusta"
-"stamp.building.none" "sv" "Ingen byggnadsbeteckning"
-"stamp.buildingid" "fi" "Rakennustunnus"
-"stamp.buildingid" "sv" "Byggnadsbeteckning"
+"stamp.building" "fi" "Rakennus"
+"stamp.building" "sv" "Byggnad"
+"stamp.include-buildings" "fi" "Lisää asemapiirrokseen kaikki rakennustunnukset"
+"stamp.include-buildings" "sv" ""
 "stamp.cancel" "fi" "Peruuta"
 "stamp.cancel" "sv" "Avbryt"
 "stamp.comment" "fi" "Leimattu"
