--- a/resources/i18n/common.txt
+++ b/resources/i18n/common.txt
@@ -5030,13 +5030,13 @@
 "verdict.voimassaHetki" "fi" "Voimassa"
 "verdict.voimassaHetki" "sv" "Giltig"
 "verdict.osapuolet.ja.yhteyshenkilot" "fi" "Osapuolet ja yhteyshenkilöt"
-"verdict.osapuolet.ja.yhteyshenkilot" "sv" ""
+"verdict.osapuolet.ja.yhteyshenkilot" "sv" "Avtalsparter och kontaktpersoner"
 "verdict.contract.content" "fi" "Sopimuksen sisältö"
-"verdict.contract.content" "sv" ""
+"verdict.contract.content" "sv" "Avtalets innehåll"
 "verdict.contract.signed.by" "fi" "Hyväksytty ja sähköisesti allekirjoitettu Lupapiste-palvelussa"
-"verdict.contract.signed.by" "sv" ""
+"verdict.contract.signed.by" "sv" "Godkänt och elektroniskt undertecknat i Lupapiste-tjänsten"
 "verdict.contract.attachments" "fi" "Sopimuksen liitteet"
-"verdict.contract.attachments" "sv" ""
+"verdict.contract.attachments" "sv" "Bilagor till avtalet"
 "verdict-attachment-prints-order.order-dialog.address" "fi" "Rakennuspaikka"
 "verdict-attachment-prints-order.order-dialog.address" "sv" "Byggplats"
 "verdict-attachment-prints-order.order-dialog.applicantName" "fi" "Hakijan nimi"
@@ -5166,8 +5166,8 @@
 "tos.function.fix.guide" "fi" "Tehtäväluokan korjaus hakee uuden luokan mukaiset oletusmetatiedot asiakirjoille, joita ei ole vielä arkistoitu. Tehtäväluokan muutos kirjataan käsittelyprosessiin korjauksena."
 "tos.function.fix.guide" "sv" "Korrigering av uppgiftsklass söker default-metadata enligt den nya klassen för oarkiverade dokuments. Ändrad uppgiftsklass skrivs in i hanteringsprocessen som korrigering."
 "tos.function.fix.reason" "fi" "Korjauksen syy"
-"tos.function.fix.reason" "sv" ""
+"tos.function.fix.reason" "sv" "Reparationsorsak"
 "tos.function.fix.select" "fi" "Uusi tehtäväluokka"
-"tos.function.fix.select" "sv" ""
+"tos.function.fix.select" "sv" "Ny uppdragsklass"
 "korjaa" "fi" "Korjaa"
-"korjaa" "sv" ""
+"korjaa" "sv" "Repareras"
