--- a/resources/i18n/schemas.txt
+++ b/resources/i18n/schemas.txt
@@ -4473,6 +4473,7 @@
 "task-katselmus.rakennukset" "fi" "Rakennukset"
 "task-katselmus.rakennukset" "sv" "Byggnader"
 "task-katselmus.no-buildings" "fi" "Ei rakennustietoja."
+"task-katselmus.no-buildings" "sv" "Ingen information om byggnaden"
 "task-katselmus.rakennus.tila._group_label" "fi" "Rakennuksen katselmus"
 "task-katselmus.rakennus.tila._group_label" "sv" "Syn av byggnad"
 "task-katselmus.rakennus.tila.kayttoonottava" "fi" "Rakennus otettu käyttöön"
@@ -4484,6 +4485,7 @@
 "task-katselmus.katselmus.tila" "fi" ""
 "task-katselmus.katselmus.tila" "sv" ""
 "task-katselmus.tiedoksianto"  "fi"  "Tiedoksianto verottajalle laiminlyöty"
+"task-katselmus.tiedoksianto" "sv" "Tillkännagivande till skattemyndigheten har underlåtits"
 "task-katselmus.rakennus.tila.tila.lopullinen" "fi" "Lopullinen"
 "task-katselmus.rakennus.tila.tila.lopullinen" "sv" "Slutlig"
 "task-katselmus.rakennus.tila.tila.osittainen" "fi" "Osittainen"
@@ -5593,3 +5595,4 @@
 "task-katselmus.rakennus.kunnanSisainenPysyvaRakennusnumero" "fi" "Kunna sisäinen pysyvä numero"
 "task-katselmus.rakennus.kunnanSisainenPysyvaRakennusnumero" "sv" "Beständig nummer inom kommunen"
 "task-katselmus.selite" "fi" "Selite"
+"task-katselmus.selite" "sv" "Förklaring"
