--- a/resources/i18n/errors.txt
+++ b/resources/i18n/errors.txt
@@ -72,8 +72,8 @@
 "error.filter-title-collision" "sv" "Namnet används redan"
 "error.foreman.notice-not-submittable" "fi" "Työnjohtajan ilmoitusta ei voi jättää ennen kuin viitteenä oleva hakemus on saanut päätöksen."
 "error.foreman.notice-not-submittable" "sv" "Arbetsledarens anmälan kan inte lämnas in före beslut om ansökan i referensen."
-"error.foreman.type-not-selected" "fi" "Valitse Osapuolet-välilehden Työnjohtajan nimeäminen-lomakkeelta onko kyseessä hakemus vai ilmoitus"
-"error.foreman.type-not-selected" "sv" "Välj på Parterna-flikens Utnämnande av arbetsledare-blankett om det är fråga om en ansökan eller ett meddelande"
+"error.foreman.type-not-selected" "fi" "Valitse onko kyseessä hakemus vai ilmoitus"
+"error.foreman.type-not-selected" "sv" "Välj om det är fråga om en ansökan eller ett meddelande"
 "error.frontend-outdated" "fi" "Lupapiste on päivittynyt, lataa sivusto uudelleen"
 "error.frontend-outdated" "sv" "Lupapiste har uppdaterats, ladda sidan på nytt"
 "error.illegal-address" "fi" "Osoite väärää muotoa"
