--- a/resources/i18n/common.txt
+++ b/resources/i18n/common.txt
@@ -442,8 +442,8 @@
 "application.statementsDesc" "sv" "Vid behov kan myndigheten be om utlåtanden från andra myndigheter gällande projektet. Myndigheten lägger till remissinstanserna.\nUnder denna flik är utlåtandena synliga för alla projektets parter."
 "application.submissionDate" "fi" "Hakemus jätetty:"
 "application.submissionDate" "sv" "Ansökan lämnad:"
-"application.submit.areyousure.message" "fi" "Oletko varma, että haluat jättää hakemuksen käsiteltäväksi? Hakemuksen käsittelemisestä veloitetaan voimassaolevan taksan mukainen hinta. Kaikkien pakollisten kenttien tulee olla täytetyt sekä pyydettyjen liitteiden ja suunnitelmien tulee olla lisättynä hakemukselle."
-"application.submit.areyousure.message" "sv" "Är du säker att du vill lämna ansökan för behandling? För behandlingen av ansökan uppbärs en avgift enligt gällande taxa. Alla obligatoriska fält bör vara ifyllda och begärda bilagor och planer tillagda i ansökan."
+"application.submit.areyousure.message!" "fi" "Oletko varma, että haluat jättää hakemuksen käsiteltäväksi? Hakemuksen käsittelemisestä veloitetaan voimassaolevan taksan mukainen hinta, jos kunnan viranomaisen maksuperusteissa on niin määrätty. Kaikkien pakollisten kenttien tulee olla täytetyt sekä pyydettyjen liitteiden ja suunnitelmien tulee olla lisättynä hakemukselle."
+"application.submit.areyousure.message!" "sv" "Är du säker att du vill lämna ansökan för behandling? För behandlingen av ansökan uppbärs en avgift enligt gällande taxa. Alla obligatoriska fält bör vara ifyllda och begärda bilagor och planer tillagda i ansökan."
 "application.submit.areyousure.title" "fi" "Jätä hakemus käsiteltäväksi"
 "application.submit.areyousure.title" "sv" "Lämna ansökan för behandling"
 "application.submitApplication" "fi" "Jätä hakemus"
