Refactored resources-admin page so that creating a calendar is now done by simply ticking a checkbox

--- a/resources/i18n/common.txt
+++ b/resources/i18n/common.txt
@@ -993,7 +993,9 @@
 "auth-admin.resource.calendar.name" "fi" "Nimi"
 "auth-admin.resource.calendar.name" "sv" "Namn"
 "auth-admin.resources-admin" "fi" "Kalenterien hallinta"
-"auth-admin.resources-admin" "sv" "Kalendarhantering"
+"auth-admin.resources-admin" "sv" "Kalenderhantering"
+"auth-admin.resources-admin.calendars.title" "fi" "Organisaation viranomaisten kalenterit"
+"auth-admin.resources-admin.calendars.title" "sv" "Myndigheternas kalendrar inom organisationen"
 "auth-admin.role" "fi" "Rooli"
 "auth-admin.role" "sv" "Roll"
 "auth-admin.selected-operations" "fi" "Käyttöön valitut toimenpiteet"
