Added hakija-tj schema, that has no required fields

--- a/resources/i18n/common.txt
+++ b/resources/i18n/common.txt
@@ -1616,6 +1616,10 @@
 "hakija-r._append_label" "sv" "Lägg till sökande"
 "hakija-r._group_label" "fi" "Hakija (hankkeeseen ryhtyvä)"
 "hakija-r._group_label" "sv" "Sökande (åtar sig projektet)"
+"hakija-tj._append_label" "fi" "Lisää hakija"
+"hakija-tj._append_label" "sv" "Lägg till sökande"
+"hakija-tj._group_label" "fi" "Hakija (hankkeeseen ryhtyvä)"
+"hakija-tj._group_label" "sv" "Sökande (åtar sig projektet)"
 "hankkeen-kuvaus._group_label" "fi" "Hankkeen kuvaus"
 "hankkeen-kuvaus._group_label" "sv" "Projektbeskrivning"
 "hankkeen-kuvaus.kuvaus" "fi" "Selostus rakennushankkeesta tai toimenpiteestä"
