--- a/resources/i18n/common.txt
+++ b/resources/i18n/common.txt
@@ -876,6 +876,12 @@
 "auth-admin.asianhallinta-enabled" "sv" "Ärendehantering aktiverad"
 "auth-admin.backends" "fi" "Linkit ja taustajärjestelmät"
 "auth-admin.backends" "sv" "Länkar och bakgrundssystem"
+"auth-admin.calendar.create-slot" "fi" "Lisää varattavia aikoja"
+"auth-admin.calendar.create-slot" "sv" "Lägg till bokningsbara tider"
+"auth-admin.calendar.inuse" "fi" "Kalenteri käytössä"
+"auth-admin.calendar.inuse" "sv" "Kalender i bruk"
+"auth-admin.calendar.name" "fi" "Nimi"
+"auth-admin.calendar.name" "sv" "Namn"
 "auth-admin.create-statement-person" "fi" "Lisää lausunnonantaja"
 "auth-admin.create-statement-person" "sv" "Lägg till givare av utlåtande"
 "auth-admin.edit-roles.greeting" "fi" "Valitse käyttäjän {0} roolit"
@@ -978,6 +984,10 @@
 "auth-admin.operations-attachments.attachments" "sv" "Bilagor"
 "auth-admin.operations-attachments.operation" "fi" "Toimenpide"
 "auth-admin.operations-attachments.operation" "sv" "Åtgärd"
+"auth-admin.organization-calendars" "fi" "Kalenterien hallinta"
+"auth-admin.organization-calendars" "sv" "Kalenderhantering"
+"auth-admin.organization-calendars.calendars.title" "fi" "Organisaation viranomaisten kalenterit"
+"auth-admin.organization-calendars.calendars.title" "sv" "Myndigheternas kalendrar inom organisationen"
 "auth-admin.otherParameters" "fi" "Muut tiedot"
 "auth-admin.otherParameters" "sv" "Övriga uppgifter"
 "auth-admin.parameter" "fi" "Tieto"
@@ -986,18 +996,6 @@
 "auth-admin.required-fields-obligatory.enabled" "sv" "Blocka inlämning av ansökan med bristfällig information"
 "auth-admin.required-fields-obligatory.title" "fi" "Ehdot hakemusten jättämiseksi"
 "auth-admin.required-fields-obligatory.title" "sv" "Villkor för att lämna ansökan"
-"auth-admin.resource.calendar.add" "fi" "Lisää kalenteri"
-"auth-admin.resource.calendar.add" "sv" "Lägg till kalendar"
-"auth-admin.resource.calendar.create-slot" "fi" "Lisää varattavia aikoja"
-"auth-admin.resource.calendar.create-slot" "sv" "Lägg till bokningsbara tider"
-"auth-admin.resource.calendar.inuse" "fi" "Kalenteri käytössä"
-"auth-admin.resource.calendar.inuse" "sv" "Kalender i bruk"
-"auth-admin.resource.calendar.name" "fi" "Nimi"
-"auth-admin.resource.calendar.name" "sv" "Namn"
-"auth-admin.resources-admin" "fi" "Kalenterien hallinta"
-"auth-admin.resources-admin" "sv" "Kalenderhantering"
-"auth-admin.resources-admin.calendars.title" "fi" "Organisaation viranomaisten kalenterit"
-"auth-admin.resources-admin.calendars.title" "sv" "Myndigheternas kalendrar inom organisationen"
 "auth-admin.role" "fi" "Rooli"
 "auth-admin.role" "sv" "Roll"
 "auth-admin.selected-operations" "fi" "Käyttöön valitut toimenpiteet"
