--- a/resources/i18n/schemas.txt
+++ b/resources/i18n/schemas.txt
@@ -1169,32 +1169,51 @@
 "meluilmoitus.tapahtuma.ulkoilmakonsertti" "fi" "Ulkoilmakonsertti"
 "meluilmoitus.tapahtuma.ulkoilmakonsertti" "sv" "Utomhuskonsert"
 "meluilmoitus.leviaminen._group_label" "fi" "Häiriintyvät kohteet"
+"meluilmoitus.leviaminen._group_label" "sv" "Objekt som störs"
 "meluilmoitus.leviaminen.groupHelpText" "fi" "Häiriintyvät kohteet ympäristössä ja vaikutus niiden melutasoon"
+"meluilmoitus.leviaminen.groupHelpText" "sv" "Objekt som störs i omgivningen och inverkan på deras bullernivå"
 "meluilmoitus.leviaminen.kohde" "fi" "Kohde"
+"meluilmoitus.leviaminen.kohde" "sv" "Objekt"
 "meluilmoitus.leviaminen.etaisyys" "fi" "Etäisyys toimipaikalta"
+"meluilmoitus.leviaminen.etaisyys" "sv" "Avstånd från verksamhetsstället"
 "meluilmoitus.leviaminen.vaikutus" "fi" "Vaikutus kohteen melutasoon"
+"meluilmoitus.leviaminen.vaikutus" "sv" "Inverkan på objektets bullernivå"
 "meluilmoitus.leviaminen._append_label" "fi" "Lisää rivi"
 "meluilmoitus.leviaminen._append_label" "sv" "Tillägg rad"
 "meluilmoitus.leviaminen._copy_label" "fi" "Kopioi viimeinen rivi"
 "meluilmoitus.leviaminen._copy_label" "sv" "Kopiera den sista raden"
 "meluilmoitus.torjunta-ja-seuranta._group_label" "fi" "Torjunta ja seuranta"
+"meluilmoitus.torjunta-ja-seuranta._group_label" "sv" "Bekämpning och uppföljning"
 "meluilmoitus.torjunta-ja-seuranta.torjuntatoimenpiteet" "fi" "Torjuntatoimenpiteet"
+"meluilmoitus.torjunta-ja-seuranta.torjuntatoimenpiteet" "sv" "Bekämpningsåtgärder"
 "meluilmoitus.torjunta-ja-seuranta.seuranta" "fi" "Melutilanteen seuranta"
+"meluilmoitus.torjunta-ja-seuranta.seuranta" "sv" "Uppföljning av bullerförhållanden"
 "meluilmoitus.tiedottaminen._group_label" "fi" "Tiedottaminen"
+"meluilmoitus.tiedottaminen._group_label" "sv" "Information"
 "meluilmoitus.tiedottaminen.talokohtainen" "fi" "Talokohtainen"
+"meluilmoitus.tiedottaminen.talokohtainen" "sv" "Husspecifik"
 "meluilmoitus.tiedottaminen.huoneistokohtainen" "fi" "Huoneistokohtainen"
+"meluilmoitus.tiedottaminen.huoneistokohtainen" "sv" "Lägenhetsspecifik"
 "meluilmoitus.tiedottaminen.porraskaytavakohtainen" "fi" "Porraskäytäväkohtainen"
+"meluilmoitus.tiedottaminen.porraskaytavakohtainen" "sv" "Trappspecifik"
 "meluilmoitus.tiedottaminen.laajuus" "fi" "Jakelualueen laajuus"
+"meluilmoitus.tiedottaminen.laajuus" "sv" "Distributionsområdets omfattning"
 "meluilmoitus.tiedottaminen.osoitteet._group_label" "fi" "Tiedotteen jakeluosoitteet"
+"meluilmoitus.tiedottaminen.osoitteet._group_label" "sv" "Adresser för distribution av information"
 "meluilmoitus.tiedottaminen.osoitteet.katu" "fi" "Kadun nimi"
+"meluilmoitus.tiedottaminen.osoitteet.katu" "sv" "Gatans namn"
 "meluilmoitus.tiedottaminen.osoitteet.numero" "fi" "Numero"
+"meluilmoitus.tiedottaminen.osoitteet.numero" "sv" "Nummer"
 "meluilmoitus.tiedottaminen.osoitteet._append_label" "fi" "Lisää rivi"
 "meluilmoitus.tiedottaminen.osoitteet._append_label" "sv" "Tillägg rad"
 "meluilmoitus.tiedottaminen.osoitteet._copy_label" "fi" "Kopioi viimeinen rivi"
 "meluilmoitus.tiedottaminen.osoitteet._copy_label" "sv" "Kopiera den sista raden"
 "meluilmoitus.lisatiedot._group_label" "fi" "Lisätiedot"
+"meluilmoitus.lisatiedot._group_label" "sv" "Tilläggsinformation"
 "meluilmoitus.lisatiedot.groupHelpText" "fi" "Kuvaa alle arviointimenelmät, joihin ilmoituksen tiedot perustuvat. Aineiston voit lisätä ilmoitukselle liitteeksi."
+"meluilmoitus.lisatiedot.groupHelpText" "sv" "Beskriv här nedan de utvärderingsmetoder som uppgifterna i meddelandet baserar sig på. Materialet kan bifogas som bilaga till ansökan."
 "meluilmoitus.lisatiedot.arviointimenetelmat" "fi" "Arviointimenetelmät"
+"meluilmoitus.lisatiedot.arviointimenetelmat" "sv" "Utvärderingsmetoder"
 "muistomerkin-rauhoittaminen._group_label" "fi" "Luonnonmuistomerkin rauhoittaminen"
 "muistomerkin-rauhoittaminen._group_label" "sv" "Fridlysning av naturminnesmärke"
 "muistomerkki-kaytto-ja-hoito.help" "fi" "Luonnonmuistomerkki merkitään selvästi maastoon rauhoituslaatalla. Mikäli kohde on helposti saavutettavissa, voidaan siihen tutustumista helpottaa omistajan suostumuksesta esimerkiksi varustamalla kohde opasteella."
