Correct some invalid Swedish translations

--- a/resources/i18n/common.txt
+++ b/resources/i18n/common.txt
@@ -1057,9 +1057,9 @@
 "authorityrole.reader" "fi" "Lukuoikeus"
 "authorityrole.reader" "sv" "Läsrättigheter"
 "authorityrole.tos-editor" "fi" "Tiedonohjaussuunnitelman muokkaaja"
-"authorityrole.tos-editor" "sv" "Redigerare för styrinformationsplanen"
+"authorityrole.tos-editor" "sv" "Redigerare för informationsstyrningsplanen"
 "authorityrole.tos-publisher" "fi" "Tiedonohjaussuunnitelman julkaisija"
-"authorityrole.tos-publisher" "sv" "Publicerare för styrinformationsplanen"
+"authorityrole.tos-publisher" "sv" "Publicerare för informationsstyrningsplanen"
 "autocomplete.no-results" "fi" "Ei hakutuloksia"
 "autocomplete.no-results" "sv" "Inga sökresultat"
 "auto-katos._group_label" "fi" "Auto- tai grillikatoksen, vajan, kioskin tai vastaavan rakentaminen"
@@ -1307,7 +1307,7 @@
 "caseFile.tosFunctionCorrection" "fi" "Tehtäväluokka korjattu"
 "caseFile.tosFunctionCorrection" "sv" "Uppgiftsklass korrigerad"
 "caseFile.stateNotSet" "fi" "Ei asetettu tiedonohjaussuunnitelmassa"
-"caseFile.stateNotSet" "sv" "Inte inställd i datastyrningsplanen"
+"caseFile.stateNotSet" "sv" "Inte inställd i informationsstyrningsplanen"
 "caseFile.event" "fi" "Tapahtuma"
 "caseFile.event" "sv" "Skeende"
 "caseFile.complementNeeded" "fi" "Palautettu täydennettäväksi"
@@ -4055,6 +4055,6 @@
 "tos.function.fix.reason" "fi" "Korjauksen syy"
 "tos.function.fix.reason" "sv" "Reparationsorsak"
 "tos.function.fix.select" "fi" "Uusi tehtäväluokka"
-"tos.function.fix.select" "sv" "Ny uppdragsklass"
+"tos.function.fix.select" "sv" "Ny uppgiftsklass"
 "korjaa" "fi" "Korjaa"
 "korjaa" "sv" "Repareras"
