--- a/resources/i18n/errors.txt
+++ b/resources/i18n/errors.txt
@@ -460,3 +460,4 @@
 "error.vrk:CR342" "sv" "El som bränsle kräver en elanslutning"
 "error.vrk:CR343" "fi" "Jos lämmitystapa on sähkölämmitys, on polttoaineen oltava sähkö"
 "error.vrk:CR343" "sv" "Om uppvärmningssättet är elvärme, måste bränslet vara el."
+"error.foreman-already-linked" "fi" "Työnjohtaja on jo nimetty eri rooliin."
