change ymp-kesto schema to support multiple rows

--- a/resources/i18n/schemas.txt
+++ b/resources/i18n/schemas.txt
@@ -5564,26 +5564,24 @@
 "ymp-ilm-kesto.kesto._group_label" "sv" "Verksamhetens varaktighet"
 "ymp-ilm-kesto.kesto.alku" "fi" "Aloitus"
 "ymp-ilm-kesto.kesto.alku" "sv" "Inledning"
-"ymp-ilm-kesto.kesto.arki._group_label" "fi" "Kellonajat arkena"
-"ymp-ilm-kesto.kesto.arki._group_label" "sv" "Klockslag på vardagar"
-"ymp-ilm-kesto.kesto.arki.arkiAlkuAika" "fi" "Alkaa arkena kello"
-"ymp-ilm-kesto.kesto.arki.arkiAlkuAika" "sv" "Börjar på vardagar kl."
-"ymp-ilm-kesto.kesto.arki.arkiLoppuAika" "fi" "Loppuu arkena kello"
-"ymp-ilm-kesto.kesto.arki.arkiLoppuAika" "sv" "Slutar på vardagar kl."
-"ymp-ilm-kesto.kesto.lauantai._group_label" "fi" "Kellonajat lauantaina"
-"ymp-ilm-kesto.kesto.lauantai._group_label" "sv" "Klockslag på lördagar"
-"ymp-ilm-kesto.kesto.lauantai.lauantaiAlkuAika" "fi" "Alkaa lauantaina kello"
-"ymp-ilm-kesto.kesto.lauantai.lauantaiAlkuAika" "sv" "Börjar på lördagar kl."
-"ymp-ilm-kesto.kesto.lauantai.lauantaiLoppuAika" "fi" "Loppuu lauantaina kello"
-"ymp-ilm-kesto.kesto.lauantai.lauantaiLoppuAika" "sv" "Slutar på lördagar kl."
 "ymp-ilm-kesto.kesto.loppu" "fi" "Lopetus"
 "ymp-ilm-kesto.kesto.loppu" "sv" "Avslutning"
-"ymp-ilm-kesto.kesto.sunnuntai._group_label" "fi" "Kellonajat sunnuntaina"
-"ymp-ilm-kesto.kesto.sunnuntai._group_label" "sv" "Klockslag på söndagar"
-"ymp-ilm-kesto.kesto.sunnuntai.sunnuntaiAlkuAika" "fi" "Alkaa sunnuntaina kello"
-"ymp-ilm-kesto.kesto.sunnuntai.sunnuntaiAlkuAika" "sv" "Börjar på söndagar kl."
-"ymp-ilm-kesto.kesto.sunnuntai.sunnuntaiLoppuAika" "fi" "Loppuu sunnuntaina kello"
-"ymp-ilm-kesto.kesto.sunnuntai.sunnuntaiLoppuAika" "sv" "Slutar på söndagar kl."
+"ymp-ilm-kesto.kesto.arkiAlkuAika" "fi" "Alkaa arkena kello"
+"ymp-ilm-kesto.kesto.arkiAlkuAika" "sv" "Börjar på vardagar kl."
+"ymp-ilm-kesto.kesto.arkiLoppuAika" "fi" "Loppuu arkena kello"
+"ymp-ilm-kesto.kesto.arkiLoppuAika" "sv" "Slutar på vardagar kl."
+"ymp-ilm-kesto.kesto.lauantaiAlkuAika" "fi" "Alkaa lauantaina kello"
+"ymp-ilm-kesto.kesto.lauantaiAlkuAika" "sv" "Börjar på lördagar kl."
+"ymp-ilm-kesto.kesto.lauantaiLoppuAika" "fi" "Loppuu lauantaina kello"
+"ymp-ilm-kesto.kesto.lauantaiLoppuAika" "sv" "Slutar på lördagar kl."
+"ymp-ilm-kesto.kesto.sunnuntaiAlkuAika" "fi" "Alkaa sunnuntaina kello"
+"ymp-ilm-kesto.kesto.sunnuntaiAlkuAika" "sv" "Börjar på söndagar kl."
+"ymp-ilm-kesto.kesto.sunnuntaiLoppuAika" "fi" "Loppuu sunnuntaina kello"
+"ymp-ilm-kesto.kesto.sunnuntaiLoppuAika" "sv" "Slutar på söndagar kl."
+"ymp-ilm-kesto.kesto._append_label" "fi" "Lisää rivi"
+"ymp-ilm-kesto.kesto._append_label" "sv" "Tillägg rad"
+"ymp-ilm-kesto.kesto._copy_label" "fi" "Kopioi viimeinen rivi"
+"ymp-ilm-kesto.kesto._copy_label" "sv" "Kopiera den sista raden"
 "ymp-ilm-kesto-mini._group_label" "fi" "Toiminnan kesto"
 "ymp-ilm-kesto-mini._group_label" "sv" "Verksamhetens varaktighet"
 "ymp-ilm-kesto-mini.kesto._group_label" "fi" "Toiminnan kesto"
