--- a/resources/i18n/common.txt
+++ b/resources/i18n/common.txt
@@ -4058,3 +4058,7 @@
 "tos.function.fix.select" "sv" "Ny uppdragsklass"
 "korjaa" "fi" "Korjaa"
 "korjaa" "sv" "Repareras"
+"verdict.vastuuhenkilo" "fi" "Vastuuhenkilö"
+"verdict.vastuuhenkilo" "sv" ""
+"verdict.yhteyshenkilo" "fi" "Yhteyshenkilö"
+"verdict.yhteyshenkilo" "sv" ""
