YA contract PDF/A generation added

--- a/resources/i18n/common.txt
+++ b/resources/i18n/common.txt
@@ -4082,3 +4082,5 @@
 "verdict.vastuuhenkilo" "sv" ""
 "verdict.yhteyshenkilo" "fi" "Yhteyshenkilö"
 "verdict.yhteyshenkilo" "sv" ""
+"verdict.contract.date" "fi" "Sopimuksen päivämäärä"
+"verdict.contract.date" "sv" ""
